Add STT service implementation with configuration, API endpoints, and testing framework
- Updated .gitignore to include audio file formats.
- Added FastAPI-based STT service with endpoints for health check and audio transcription.
- Created configuration model for STT settings using Pydantic.
- Included requirements for FastAPI, Uvicorn, and Whisper.
- Implemented tests for service health and transcription functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,15 @@ htmlcov/
 # Docker
 .dockerignore
 
+#media files
+*.wav
+*.mp3
+*.m4a
+*.flac
+*.ogg
+*.aac
+*.wma
+*.aiff
+*.aif
+*.aifc
+*.aifp
