--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 openai-whisper==20231117
-torch>=2.0.0
-torchaudio>=2.0.0
 pydantic==2.5.0
 requests==2.31.0
+
+# PyTorch installation:
+# For GPU (CUDA 12.1): pip install -r requirements-cuda.txt
+# For CPU-only: pip install torch torchvision torchaudio
