--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ python-multipart==0.0.6
 openai-whisper==20231117
 pydantic==2.5.0
 requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
 
 # PyTorch installation:
 # For GPU (CUDA 12.1): pip install -r requirements-cuda.txt
