Add RAG service implementation with campaign indexing and querying
- Introduced RAGService to manage the indexing and querying of campaign data.
- Implemented a vector store using FAISS for efficient similarity search.
- Added embedding service for generating text embeddings using Sentence Transformers.
- Created retriever and generator components for handling query processing and response generation.
- Developed chunker for breaking down campaign data into manageable pieces.
- Implemented a FastAPI-based API for querying the RAG system.
- Updated requirements.txt to include new dependencies for FAISS, Sentence Transformers, and OpenAI.
- Added scripts for indexing campaigns and querying the RAG service.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ pydantic==2.5.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+openai>=1.0.0
+python-dotenv>=1.0.0
 
 # PyTorch installation:
 # For GPU (CUDA 12.1): pip install -r requirements-cuda.txt
