Add Gateway service with API endpoints and service orchestration
- Introduced a new Gateway service to manage interactions between STT and RAG services.
- Implemented API endpoints for voice and text queries, transcription, and campaign scraping.
- Added circuit breaker pattern for improved error handling in service calls.
- Created a script to run all services in separate terminal windows for easier management.
- Updated requirements.txt to include httpx for asynchronous HTTP requests.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ faiss-cpu>=1.7.4
 sentence-transformers>=2.2.2
 openai>=1.0.0
 python-dotenv>=1.0.0
+httpx>=0.25.0
 
 # PyTorch installation:
 # For GPU (CUDA 12.1): pip install -r requirements-cuda.txt
