--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ sentence-transformers>=2.2.2
 openai>=1.0.0
 python-dotenv>=1.0.0
 httpx>=0.25.0
+pytest>=7.4.0
+pytest-mock>=3.11.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
 
 # PyTorch installation:
 # For GPU (CUDA 12.1): pip install -r requirements-cuda.txt
