--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pytest>=7.4.0
 pytest-mock>=3.11.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
+locust>=2.17.0
 
 # PyTorch installation:
 # For GPU (CUDA 12.1): pip install -r requirements-cuda.txt
