Update environment variables and documentation; enhance .gitignore
- Updated the default OpenAI model in docker-compose files to `gpt-4.1-mini`.
- Added new entries to .gitignore for ignoring HTML, DOCX, and PDF files.
- Revised ENV_SETUP.md to reflect the updated OpenAI model and streamline variable descriptions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - ./.env:/app/.env
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4o-mini}
+      - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4.1-mini}
       - CEPTETEB_URL=${CEPTETEB_URL:-https://www.cepteteb.com.tr}
     networks:
       - tebarf-network
