--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pytest-mock>=3.11.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 locust>=2.17.0
+streamlit>=1.28.0
 
 # PyTorch installation:
 # For GPU (CUDA 12.1): pip install -r requirements-cuda.txt
